# mcp-recipes

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  mcp-recipes.container
src/: config.rs  db.rs  embeddings.rs  main.rs  models.rs  tools.rs
